--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "^51.0.9",
+    "expo-camera": "~15.0.10",
+    "expo-image": "~1.12.9",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-safe-area-context": "^4.10.3",
+    "react-native-maps": "1.14.0",
+    "expo-location": "~17.0.1",
+    "expo-image-picker": "~15.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
